# routes/api.php
@@ -16,6 +16,6 @@ Route::get('/user', function (Request $request) {
 Route::apiResource('users', UserController::class);
 Route::apiResource('categories', CategoryController::class);
 Route::apiResource('transactions', TransactionController::class);
-Route::apiResource('pemasukan', App\Http\Controllers\API\PemasukanController::class);
-Route::apiResource('pengeluaran', App\Http\Controllers\API\PengeluaranController::class);
-Route::apiResource('utang', App\Http\Controllers\UtangController::class);
+Route::apiResource('pemasukan', PemasukanController::class);
+Route::apiResource('pengeluaran', PengeluaranController::class);
+Route::apiResource('utang', UtangController::class);
